corrected spelling mistake and removed extra space

--- a/avatar/avatar.css
+++ b/avatar/avatar.css
@@ -9,8 +9,6 @@
 
 .avatar-item{
     border-radius: 50%;
-    
-    border: irem solid grey;
 }
 
 .avatar-ex-lg{
